# dlib-android

./: .gitignore  .gitmodules  build.gradle
app/: build.gradle
app/src/androidTest/java/: DLibFunctionsTest.java  FaceDetTest.java
app/src/main/java/com/tzutalin/dlibtest/: MainActivity.java  OnGetImageListener.java
dlib/: build.gradle
dlib/dlib/: custom_deserialization.h
dlib/src/main/java/com/tzutalin/dlib/: Constants.java  FaceDet.java  VisionDetRet.java
dlib/src/main/jni/: CMakeLists.txt
dlib/src/main/jni/OpenCV-android-sdk/samples/: example-15-puzzle.apk  example-camera-calibration.apk  example-color-blob-detection.apk  example-face-detection.apk  example-image-manipulations.apk  example-tutorial-1-camerapreview.apk  example-tutorial-2-mixedprocessing.apk  example-tutorial-3-cameracontrol.apk
dlib/src/main/jni/OpenCV-android-sdk/sdk/native/jni/: OpenCV.mk
dlib/src/main/jni/OpenCV-android-sdk/sdk/native/jni/abi-arm64-v8a/: OpenCVModules-release.cmake
dlib/src/main/jni/OpenCV-android-sdk/sdk/native/jni/abi-armeabi-v7a/: OpenCVConfig.cmake  OpenCVModules-release.cmake
dlib/src/main/jni/OpenCV-android-sdk/sdk/native/jni/abi-x86/: OpenCVModules-release.cmake  OpenCVModules.cmake
dlib/src/main/jni/OpenCV-android-sdk/sdk/native/jni/include/opencv2/: cvconfig.h  opencv_modules.hpp
dlib/src/main/jni/dlib/dlib/: custom_deserialization.h
dlib/src/main/jni/dlib/dlib/image_processing/: shape_predictor.h
dlib/src/main/jni/jni_common/: jni_primitives.h
dlib/src/main/jni/jni_detections/: detector.h  jni_face_det.cpp  jni_pedestrian_det.cpp
gradle/wrapper/: gradle-wrapper.properties
